--- a/GuessingGame.Gui.Blazor.Client/Pages/Index.cshtml
+++ b/GuessingGame.Gui.Blazor.Client/Pages/Index.cshtml
@@ -36,8 +36,8 @@
 
     async Task CheckNumber() {
         var response = await http.GetAsync($"/api/game/checknumber/?number={Number}").ConfigureAwait(false);
-        if (response.IsSuccessStatusCode) gameOver = true;
         Message = await response.Content.ReadAsStringAsync();
+        if(Message.Contains("Correct")) gameOver = true;
         StateHasChanged();
     }
 
